# manas

./: CMakeLists.txt  LICENSE  README.md
include/generator/GeVsim/: GeVsim.hpp
include/generator/util/: GeWriter.hpp
include/ir/IrManas/: IrManas.hpp  IrManasBase.hpp  IrManasBranch.hpp  IrManasDelay.hpp  IrManasDpu.hpp  IrManasDrraCell.hpp  IrManasHalt.hpp  IrManasJump.hpp  IrManasLoopheader.hpp  IrManasLooptail.hpp  IrManasMemVar.hpp  IrManasRaccu.hpp  IrManasRefi1.hpp  IrManasRefi2.hpp  IrManasRefi3.hpp  IrManasRoute.hpp  IrManasSramread.hpp  IrManasSramwrite.hpp  IrManasSwb.hpp  IrManasVar.hpp
include/ir/IrManus/: IrManus.hpp  IrManusBase.hpp  IrManusBranch.hpp  IrManusDelay.hpp  IrManusDpu.hpp  IrManusHalt.hpp  IrManusJump.hpp  IrManusLoopheader.hpp  IrManusLooptail.hpp  IrManusMemVar.hpp  IrManusRaccu.hpp  IrManusRefi1.hpp  IrManusRefi2.hpp  IrManusRefi3.hpp  IrManusRoute.hpp  IrManusSramread.hpp  IrManusSramwrite.hpp  IrManusSwb.hpp  IrManusVar.hpp
include/parser/ParManas/: ParManas.hpp
include/parser/ParManus/: ParManus.hpp
include/util/: Common.hpp
include/util/log/: easylogging++.h
include/vesyla/: main.hpp
src/generator/GenVsim/: GeVsim_tb.cpp
src/generator/util/: GeWriter.cpp
src/ir/IrManas/: IrManas.cpp  IrManasBase.cpp  IrManasVar.cpp
src/ir/IrManus/: IrManus.cpp  IrManusBase.cpp  IrManusVar.cpp
src/parser/ParManas/: ParManas.cpp  ParManas.l  ParManas.y
src/parser/ParManus/: ParManus.cpp  ParManus.l  ParManus.y
src/vesyla/: main.cpp
testcases/: test001_01.mamas  test001_01.manus  test012_01.mamas  test014_01.mamas  test014_28.manus
